force-app/main/default/objects/Round_Robin_Field_Priority__c/Round_Robin_Field_Priority__c.object-meta.xml
<CustomObject>
    <description>Universal master table storing priority weights for Lead fields used in Round Robin matching. Higher priority = more important field for RR specificity scoring.</description>
    <label>Round Robin Field Priority</label>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Priority Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin Field Priorities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>