force-app/main/default/objects/Round_Robin_Field_Priority__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this field priority is active and available for selection</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>