force-app/main/default/objects/Round_Robin_Field_Priority__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of the Lead field (e.g. Project__c, Zone__c). Must be unique.</description>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>