force-app/main/default/objects/Round_Robin_Field_Priority__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Human-readable label of the Lead field for display</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>