force-app/main/default/objects/Round_Robin_Field_Priority__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Universal weight for this field. Higher = more important. Example: Project=1000, Zone=100, Source=1</description>
    <label>Priority</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>