force-app/main/default/objects/Round_Robin_Field_Priority__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Field_Label__c</columns>
    <columns>Priority__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>